# stickerpicker

./: README.md  pyproject.toml
.github/workflows/: install-stickers.yml  main-deploy.yml  new-version-deploy.yml  pack-add-image.yml  pack-add-imported.yml  pack-create.yml  pages-deploy.yml  static.yml  uninstall-stickers.yml  user-add-pack.yml  user-add-packs.yml  user-del-packs.yml  user-install.yml  user-uninstall.yml
packs/: README.md
packs/example/: pack.json
packs/imported/: scalar-isabella.json  scalar-loading_artist.json  scalar-privacy_pam.json  scalar-rabbit.json  scalar-sheltie.json  scalar-smilies.json  scalar-stakey.json  scalar-stickman.json  scalar-videoplasty.json
packs/other/: pack.json
packs/test/: pack.json
packs/test2/: pack.json
src/: __init__.py  sticker_import.py  sticker_pack.py  sticker_user.py
src/lib/: matrix.py  util.py
web/: index.html
web/src/: index.js
web/users/: index.json  mario.carpente.json
web/users/packs/: scalar-geeko.json
