[tool.poetry]
name = "src"
version = "1.0.0"
description = "Multi user stickerpicker"
authors = ["Tulir Asokan", "MCV"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"
python-magic = "^0.4.25"
typer = "^0.9.0"
requests = "^2.31.0"
yarl = "^1.9.4"
pillow = "^10.2.0"
cryptg = "^0.4.0"
aiohttp = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
import='src:import_pack'
pack='src:pack'
user='src:user'
